--- a/Ch02/App.xaml
+++ b/Ch02/App.xaml
@@ -2,5 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:kNN"
+             StartupUri="MainWindow.xaml"
+             Startup="App_Startup">
+    <Application.Resources>
     </Application.Resources>
 </Application>
