--- a/Ch02/MainWindow.xaml
+++ b/Ch02/MainWindow.xaml
@@ -1,16 +1,13 @@
 ﻿<Window x:Class="kNN.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:kNN"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Window.DataContext>
-        <local:MainViewModel/>
-    </Window.DataContext>
+        Title="MainWindow"
+        Height="50"
+        Width="50">
     <Grid>
-        <oxy:PlotView Model="{Binding MyModel}"/>
     </Grid>
 </Window>
